[package]
name = "nekomata_responce_server"
version = "0.1.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.0"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
